Add the instructions

--- a/assignment1/.env.example
+++ b/assignment1/.env.example
@@ -1,7 +1,7 @@
-POSTGRES_HOST=products_db
+POSTGRES_HOST=sensor_db
 POSTGRES_USER=username
 POSTGRES_PASSWORD=password
 POSTGRES_DATABASE=database
 POSTGRES_PORT=5432
-ASYNC_DATABASE_URI=postgresql+asyncpg://username:password@products_db:5432/database
+ASYNC_DATABASE_URI=postgresql+asyncpg://username:password@sensor_db:5432/database
 PROJECT_NAME=Sensor Data
