--- a/assignment1/docker-compose.yml
+++ b/assignment1/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     env_file:
       - ./.env
     
-    # Define a dependency on the "products_db" service, so it starts first
+    # Define a dependency on the "sensor_db" service, so it starts first
     depends_on:
       - sensor_db
 
